@@ -192,7 +192,12 @@ if ($barre_plugin!="") {
 		//=======================================================
 		// Module discipline
 		if (getSettingValue("active_mod_discipline")=='y') {
-			$menus .= '<li class="li_inline"><a href="'.$gepiPath.'/mod_discipline/index.php"'.insert_confirm_abandon().'>Discipline</a></li>'."\n";
+			$temoin_disc="";
+			$cpt_disc=get_temoin_discipline_personnel();
+			if($cpt_disc>0) {
+				$temoin_disc=" <img src='$gepiPath/images/icons/flag2.gif' class='icone16' title=\"Un ou des ".$mod_disc_terme_incident."s ($cpt_disc) ont été saisis dans les dernières 24h ou depuis votre dernière connexion.\" />";
+			}
+			$menus .= '<li class="li_inline"><a href="'.$gepiPath.'/mod_discipline/index.php"'.insert_confirm_abandon().'>Discipline</a>'.$temoin_disc.'</li>'."\n";
 		}
 		//=======================================================
 
